--- a/case-studies/pixel-old.html
+++ b/case-studies/pixel-old.html
@@ -5,8 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="../css/style.css"/>
+    <script src="../scripts/index.js"></script>
 </head>
-<body class="case-studies case-studies--pixel">
+<body class="case-studies">
     <div class="overlaying-navigation">
         <input type="checkbox" class="overlaying-navigation__checkbox" id='navi-toggle'>
         <label for="navi-toggle" class="overlaying-navigation__button">
@@ -31,27 +32,27 @@
                 <ul class="footer__list footer__list--standalone">
                     <li class="footer__list-item">
                         <a href="#" class="footer__link">
-                            <img src="../img/svg/Shared/instagram.svg" alt="" class="footer__social-media">
+                            <img src="../img/svg/instagram.svg" alt="" class="footer__social-media">
                         </a>
                     </li>
                     <li class="footer__list-item">
                         <a href="#" class="footer__link">
-                            <img src="../img/svg/Shared/behance.svg" alt="" class="footer__social-media">
+                            <img src="../img/svg/behance.svg" alt="" class="footer__social-media">
                         </a>
                     </li>
                     <li class="footer__list-item">
                         <a href="#" class="footer__link">
-                            <img src="../img/svg/Shared/dribble.svg" alt="" class="footer__social-media">
+                            <img src="../img/svg/dribble.svg" alt="" class="footer__social-media">
                         </a>
                     </li>
                     <li class="footer__list-item">
                         <a href="#" class="footer__link">
-                            <img src="../img/svg/Shared/linkedin.svg" alt="" class="footer__social-media">
+                            <img src="../img/svg/linkedin.svg" alt="" class="footer__social-media">
                         </a>
                     </li>
                     <li class="footer__list-item">
                         <a href="#" class="footer__link">
-                            <img src="../img/svg/Shared/facebook.svg" alt="" class="footer__social-media">
+                            <img src="../img/svg/facebook.svg" alt="" class="footer__social-media">
                         </a>
                     </li>
                 </ul>
@@ -73,25 +74,25 @@
                 </ul>
             </nav>
         </div>
-            <div class="case-study" id="case-study" >
-                <div id="hero-image" style="background-image: url(../img/case-studies/pixel-playground/pixel-playground_cover.png)" class="case-study__cover">
-                    <div id="left-arrow" class="case-study__arrow-container case-study__arrow-container--left">
-                        <img src="../img/svg/arrow-left.svg" alt="" class="case-study__arrow case-study__arrow--left">
-                    </div>
-                    <div id="right-arrow" class="case-study__arrow-container case-study__arrow-container--right">
-                        <img src="../img/svg/arrow-right.svg" alt="" class="case-study__arrow case-study__arrow--right">
-                    </div>
+        <div class="case-study" id="case-study" >
+            <div id="hero-image" style="background-image: url(../img/covers/hero-mayhem.png)" class="case-study__cover">
+                <div id="left-arrow" class="case-study__arrow-container case-study__arrow-container--left">
+                    <img src="../img/svg/arrow-left.svg" alt="" class="case-study__arrow case-study__arrow--left">
                 </div>
-                <div id="button-more" class="case-study__triangle">
-                    <img src="../img/svg/case-study__triangle.svg" class="case-study__triangle-image">
-                </div>
-                <div class="case-study__description">
-                    <h1 class="case-study__study-heading">Case study: Website design pixel playground</h1>
-                    <p class="case-study__study-description">
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo commodi repellendus deleniti, consectetur est iure ipsa nam fugiat voluptatum amet porro accusantium, aspernatur exercitationem laboriosam incidunt distinctio officiis sit expedita?
-                    </p>
+                <div id="right-arrow" class="case-study__arrow-container case-study__arrow-container--right">
+                    <img src="../img/svg/arrow-right.svg" alt="" class="case-study__arrow case-study__arrow--right">
                 </div>
             </div>
+            <div id="button-more" class="case-study__triangle">
+                <img src="../img/svg/case-study__triangle.svg" class="case-study__triangle-image">
+            </div>
+            <div class="case-study__description">
+                <h1 class="case-study__study-heading">Case study: Website design pixel playground</h1>
+                <p class="case-study__study-description">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo commodi repellendus deleniti, consectetur est iure ipsa nam fugiat voluptatum amet porro accusantium, aspernatur exercitationem laboriosam incidunt distinctio officiis sit expedita?
+                </p>
+            </div>
+        </div>
     </header>
     <main>
         <section class="section-brief">
@@ -166,40 +167,10 @@
                 Desktop website design
             </h4>
         </section>
-        <section class="section-gallery">
-            <div class="gallery-case">
-                <div class="gallery-case__left">
-                    <div class="gallery-case__item gallery-case__item--1">
-                        <img src="../img/case-studies/pixel-playground/pixel pic 1.png" alt="" class="gallery-case__image">
-                    </div>
-                    <div class="gallery-case__item gallery-case__item--2">
-                        <img src="../img/case-studies/pixel-playground/pixel pic 2.png" alt="" class="gallery-case__image">
-                    </div>
-                </div>
-                <div class="gallery-case__right">
-                    <div class="gallery-case__item gallery-case__item--3">
-                        <img src="../img/case-studies/pixel-playground/pixel pic 4.png" alt="" class="gallery-case__image">
-                    </div>
-                    <div class="gallery-case__item gallery-case__item--4">
-                        <img src="../img/case-studies/pixel-playground/pixel pic 5.png" alt="" class="gallery-case__image">
-                    </div>
-                    <div class="gallery-case__item gallery-case__item--5">
-                        <img src="../img/case-studies/pixel-playground/pixel pic 6.png" alt="" class="gallery-case__image">
-                    </div>
-                    <div class="gallery-case__item gallery-case__item--6">
-                        <img src="../img/case-studies/pixel-playground/pixel pic 7.png" alt="" class="gallery-case__image">
-                    </div>
-                </div>
-                <div class="u-clearfix"></div>
-                <div class="gallery-case__full">
-                    <div class="gallery-case__item gallery-case__item--7">
-                        <img src="../img/case-studies/pixel-playground/pixel pic 3.png" alt="" class="gallery-case__image">
-                    </div>
-                </div>
-            </div>
-
+        <section class="section-case-study-gallery">
+            input gallery here
+            <!-- input gallery here -->
         </section>
-
         <section class="view-more-projects-section">
             <div class="u-center-text u-padding-top-btm-med">
                 <button class="button button--orange view-more-projects-section__button">
