--- a/links/services.html
+++ b/links/services.html
@@ -272,7 +272,7 @@
             </div>
         </section>
         <section class="section-testimonials">
-            <div class="quote quote--med quote--round quote--orange">
+            <div class="quote quote--hidden quote--med quote--round quote--orange">
                 <div class="quote__row">
                     <span class="quote__title">Testimonial</span>
                 </div>
