--- a/links/testimonials.html
+++ b/links/testimonials.html
@@ -90,7 +90,7 @@
         <div class="section-testimonials__main u-flex-column u-flex-column--center u-mw-80 u-center-div u-content-layer">
             <div class="u-row">
                 <div id="quotes" class="u-flex-row">
-                    <div id="quote" class="quote visible quote--med quote--round quote--orange">
+                    <div id="quote" class="quote visible quote--hidden quote--med quote--round quote--orange">
                         <div class="quote__row">
                             <span class="quote__title">Testimonial 1</span>
                         </div>
@@ -106,7 +106,7 @@
                         <div class="quote__open-quote"></div>
                         <div class="quote__close-quote"></div>
                     </div>
-                    <div id="quote" class="quote quote--med quote--round quote--orange">
+                    <div id="quote" class="quote quote--hidden quote--med quote--round quote--orange">
                         <div class="quote__row">
                             <span class="quote__title">Testimonial 2</span>
                         </div>
@@ -122,7 +122,7 @@
                         <div class="quote__open-quote"></div>
                         <div class="quote__close-quote"></div>
                     </div>
-                    <div id="quote" class="quote quote--med quote--round quote--orange">
+                    <div id="quote" class="quote quote--hidden quote--med quote--round quote--orange">
                         <div class="quote__row">
                             <span class="quote__title">Testimonial 3</span>
                         </div>
