--- a/case-studies/name-your-price.html
+++ b/case-studies/name-your-price.html
@@ -6,7 +6,7 @@
     <title>Document</title>
     <link rel="stylesheet" href="../css/style.css"/>
 </head>
-<body class="case-studies case-studies--pixel">
+<body class="case-studies case-studies--name-your-price">
     <div class="overlaying-navigation">
         <input type="checkbox" class="overlaying-navigation__checkbox" id='navi-toggle'>
         <label for="navi-toggle" class="overlaying-navigation__button">
@@ -73,25 +73,25 @@
                 </ul>
             </nav>
         </div>
-            <div class="case-study" id="case-study" >
-                <div id="hero-image" style="background-image: url(../img/case-studies/pixel-playground/pixel-playground_cover.png)" class="case-study__cover">
-                    <div id="left-arrow" class="case-study__arrow-container case-study__arrow-container--left">
-                        <img src="../img/svg/arrow-left.svg" alt="" class="case-study__arrow case-study__arrow--left">
-                    </div>
-                    <div id="right-arrow" class="case-study__arrow-container case-study__arrow-container--right">
-                        <img src="../img/svg/arrow-right.svg" alt="" class="case-study__arrow case-study__arrow--right">
-                    </div>
+        <div class="case-study" id="case-study" >
+            <div id="hero-image" style="background-image: url(../img/case-studies/name-your-price/name-your-price_cover.png)" class="case-study__cover">
+                <div id="left-arrow" class="case-study__arrow-container case-study__arrow-container--left">
+                    <img src="../img/svg/arrow-left.svg" alt="" class="case-study__arrow case-study__arrow--left">
                 </div>
-                <div id="button-more" class="case-study__triangle">
-                    <img src="../img/svg/case-study__triangle.svg" class="case-study__triangle-image">
-                </div>
-                <div class="case-study__description">
-                    <h1 class="case-study__study-heading">Case study: Website design pixel playground</h1>
-                    <p class="case-study__study-description">
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo commodi repellendus deleniti, consectetur est iure ipsa nam fugiat voluptatum amet porro accusantium, aspernatur exercitationem laboriosam incidunt distinctio officiis sit expedita?
-                    </p>
+                <div id="right-arrow" class="case-study__arrow-container case-study__arrow-container--right">
+                    <img src="../img/svg/arrow-right.svg" alt="" class="case-study__arrow case-study__arrow--right">
                 </div>
             </div>
+            <div id="button-more" class="case-study__triangle">
+                <img src="../img/svg/case-study__triangle.svg" class="case-study__triangle-image">
+            </div>
+            <div class="case-study__description">
+                <h1 class="case-study__study-heading">Case study: Website design pixel playground</h1>
+                <p class="case-study__study-description">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo commodi repellendus deleniti, consectetur est iure ipsa nam fugiat voluptatum amet porro accusantium, aspernatur exercitationem laboriosam incidunt distinctio officiis sit expedita?
+                </p>
+            </div>
+        </div>
     </header>
     <main>
         <section class="section-brief">
@@ -103,7 +103,7 @@
                     <div class="study-content__item">
                         <p class="paragraph">
                             <span class="paragraph__title">Client</span>
-                            <span class="paragraph__content  u-ff-helvetica">MGG Pixel Playground</span>
+                            <span class="paragraph__content  u-ff-helvetica">MGG  Name Your Price</span>
                         </p>
                     </div>
                     <div class="study-content__item">
@@ -123,21 +123,23 @@
                     <div class="study-content__item">
                         <p class="paragraph">
                             <span class="paragraph__title">The aim</span>
-                            <span class="paragraph__content  u-ff-helvetica">The targets for Pixel Playground were threefold. First, a core website for the Pixel Playground studio that would be the central point of information surrounding the company’s new game, GAMESHOW. Secondly, An Event portal that would house all information and purchasing options for three upcoming live shows that would be hosted across the United States. Finally, an ecommerce platform was to be established for the core and event apparel collections.</span>
+                            <span class="paragraph__content  u-ff-helvetica">AustinShow was looking to relaunch NYP together with new partners in Misfits Gaming Group, with a series of live audience shows planned for 2023, Q4. FWRD were tasked with building a centralised web platform that would house all key information, as well as supporting the event as a promotional tool.
+                            </span>
                         </p>
                     </div>
                     <div class="study-content__item">
                         <p class="paragraph">
                             <span class="paragraph__title">The remedy</span>
-                            <span class="paragraph__content  u-ff-helvetica">FWRD approached the three projects as a holistic body of work, working in close collaboration with the client to deliver consistent branding and interactive user experience. Pixel Playground’s branding is playful, exciting and highly engaging. We looked to match that energy with vibrant animation and design, and a concerted effort to achieve efficient load times.</span>
-                            <span class="paragraph__content  u-ff-helvetica">Moreover, we delivered a centralised information hub for all events, working with every department involved in the project. Functioning across three different cities with individual brand flavouring, elements of programming, marketing, talent management, corporate sales, ticketing crew and more were fully blended into the architecture of the main site. Working closely with the key stakeholders in an agile and largely remote environment, we were able to develop an ecommerce platform, complete with marketing assets in an entirely digital environment.</span>
-                            <span class="paragraph__content  u-ff-helvetica">Finally, FWRD constructed a robust customer relationship management system, complete with audience nurturing programs and ecommerce platform integrated automations.</span>
+                            <span class="paragraph__content  u-ff-helvetica">With a clear idea of branding from the get-go (NYP’s classic 70s trope), building a platform to match the hyperbolic themes was the priority. Working with a host of stakeholders and talent, FWRD created custom illustrations, graphics and site elements to match the core concept, with a structure and layout to bring each page to life.
+                            </span>
+                            <span class="paragraph__content  u-ff-helvetica">All key information for each event was segmented into their own individual pages, including location, timings, talent and ticketing portal. 
+                            </span>
                         </p>
                     </div>
                     <div class="study-content__item">
                         <p class="paragraph">
                             <span class="paragraph__title">The result</span>
-                            <span class="paragraph__content  u-ff-helvetica">FWRD was able to help bring Pixel Playground to a digitally ready footing, showcasing all three verticals of the game studio to a standard befitting a youthful, creative and driven business. The collective platforms serve as a palette of entertainment for young fans, and an accessible showcase for prospective partners.</span>
+                            <span class="paragraph__content  u-ff-helvetica">We’re pleased to have assisted in creating a web foundation for Name Your Price that is a complete reflection of clear, coherent and vibrant branding, that is also an opportunity to showcase content and scale further verticals.</span>
                         </p>
                     </div>
                 </div>
@@ -166,39 +168,49 @@
                 Desktop website design
             </h4>
         </section>
+
         <section class="section-gallery">
             <div class="gallery-case">
-                <div class="gallery-case__left">
+                <div class="gallery-case__full">
                     <div class="gallery-case__item gallery-case__item--1">
-                        <img src="../img/case-studies/pixel-playground/pixel pic 1.png" alt="" class="gallery-case__image">
-                    </div>
-                    <div class="gallery-case__item gallery-case__item--2">
-                        <img src="../img/case-studies/pixel-playground/pixel pic 2.png" alt="" class="gallery-case__image">
+                        <img src="../img/case-studies/name-your-price/NYP 1.png" alt="" class="gallery-case__image">
                     </div>
                 </div>
-                <div class="gallery-case__right">
+
+                <div class="gallery-case__left">
+                    <div class="gallery-case__item gallery-case__item--2">
+                        <img src="../img/case-studies/name-your-price/NYP 2.png" alt="" class="gallery-case__image">
+                    </div>
                     <div class="gallery-case__item gallery-case__item--3">
-                        <img src="../img/case-studies/pixel-playground/pixel pic 4.png" alt="" class="gallery-case__image">
+                        <img src="../img/case-studies/name-your-price/NYP 3.png" alt="" class="gallery-case__image">
                     </div>
                     <div class="gallery-case__item gallery-case__item--4">
-                        <img src="../img/case-studies/pixel-playground/pixel pic 5.png" alt="" class="gallery-case__image">
+                        <img src="../img/case-studies/name-your-price/NYP 4.png" alt="" class="gallery-case__image">
                     </div>
+                </div>
+
+                <div class="gallery-case__right">
                     <div class="gallery-case__item gallery-case__item--5">
-                        <img src="../img/case-studies/pixel-playground/pixel pic 6.png" alt="" class="gallery-case__image">
+                        <img src="../img/case-studies/name-your-price/NYP 5.png" alt="" class="gallery-case__image">
                     </div>
                     <div class="gallery-case__item gallery-case__item--6">
-                        <img src="../img/case-studies/pixel-playground/pixel pic 7.png" alt="" class="gallery-case__image">
+                        <img src="../img/case-studies/name-your-price/NYP 6.png" alt="" class="gallery-case__image">
+                    </div>
+                    <div class="gallery-case__item gallery-case__item--7">
+                        <img src="../img/case-studies/name-your-price/NYP 7.png" alt="" class="gallery-case__image">
                     </div>
                 </div>
                 <div class="u-clearfix"></div>
+
                 <div class="gallery-case__full">
                     <div class="gallery-case__item gallery-case__item--7">
-                        <img src="../img/case-studies/pixel-playground/pixel pic 3.png" alt="" class="gallery-case__image">
+                        <img src="../img/case-studies/name-your-price/NYP 8.png" alt="" class="gallery-case__image">
                     </div>
                 </div>
             </div>
 
         </section>
+
 
         <section class="view-more-projects-section">
             <div class="u-center-text u-padding-top-btm-med">
