--- a/links/portfolio.html
+++ b/links/portfolio.html
@@ -98,7 +98,7 @@
                     <h3 class="zigzag-container__client ">RE:ACTIV</h3>
                     <p class="zigzag-container__description">Ground up brand design and development for fledging video
                         production studio in the Benelux region.</p>
-                    <a class="button button--orange zigzag-container__button">View project</a>
+                    <a href="../case-studies/reactiv.html" class="button button--orange zigzag-container__button">View project</a>
                 </div>
                 <div class="zigzag-container__item-presentation">
                     <img src="../img/covers/Portfolio/reactiv.png" class="zigzag-container__image">
@@ -111,7 +111,7 @@
                     <h3 class="zigzag-container__client">IAN BICK</h3>
                     <p class="zigzag-container__description">Centralising a successful podcaster's portofolio into a
                         modern, functional platform, while also delivering a tailored brand design uplift.</p>
-                    <a class="button button--orange zigzag-container__button">View project</a>
+                    <a href="../case-studies/ian-bick.html" class="button button--orange zigzag-container__button">View project</a>
                 </div>
                 <div class="zigzag-container__item-presentation">
                     <img src="../img/covers/Portfolio/ian.png" class="zigzag-container__image">
@@ -124,7 +124,7 @@
                     <h3 class="zigzag-container__client">KREEKCRAFT</h3>
                     <p class="zigzag-container__description">A hollistic ecommerce migration and brand uplift project
                         for a premire video games content creator</p>
-                    <a class="button button--orange zigzag-container__button">View project</a>
+                    <a href="../case-studies/kreekcraft.html" class="button button--orange zigzag-container__button">View project</a>
                 </div>
                 <div class="zigzag-container__item-presentation">
                     <img src="../img/covers/Portfolio/kreek.png" class="zigzag-container__image">
@@ -138,7 +138,7 @@
                     <p class="zigzag-container__description">Construction of a three pronged hub for a new, youth
                         focused games studio, featuring the launch title, GAMESHOW, an integrated events portal, and a
                         fully developed ecommeerce platform.</p>
-                    <a class="button button--orange zigzag-container__button">View project</a>
+                    <a  href="../case-studies/pixel.html" class="button button--orange zigzag-container__button">View project</a>
                 </div>
                 <div class="zigzag-container__item-presentation">
                     <img src="../img/covers/Portfolio/pp.png" class="zigzag-container__image">
@@ -151,7 +151,7 @@
                     <h3 class="zigzag-container__client">NAME YOUR PRICE</h3>
                     <p class="zigzag-container__description">A fully developed events, merchandise and content platform
                         for an established YouTube content creator and television personality.</p>
-                    <a class="button button--orange zigzag-container__button">View project</a>
+                    <a href="../case-studies/name-your-price.html" class="button button--orange zigzag-container__button">View project</a>
                 </div>
                 <div class="zigzag-container__item-presentation">
                     <img src="../img/covers/Portfolio/nyp.png" class="zigzag-container__image">
@@ -163,7 +163,7 @@
                     <h4 class="zigzag-container__title">Design</h4>
                     <h3 class="zigzag-container__client">Florida Mayhem</h3>
                     <p class="zigzag-container__description">Complete end-to-end merchandise support, design services and web development for a world renowned esports organisation.</p>
-                    <a class="button button--orange zigzag-container__button">View project</a>
+                    <a href="../case-studies/florida-mayhem.html" class="button button--orange zigzag-container__button">View project</a>
                 </div>
                 <div class="zigzag-container__item-presentation">
                     <img src="../img/covers/Portfolio/mayhem.png" class="zigzag-container__image">
