--- a/case-studies/ian-bick.html
+++ b/case-studies/ian-bick.html
@@ -73,7 +73,7 @@
                 </ul>
             </nav>
         </div>
-        <div class="case-study" id="case-study" >
+        <div class="case-study" id="case-study" data-show-description="hidden">
             <div id="hero-image" style="background-image: url(../img/case-studies/ian-bick/ian-bick_cover.png)" class="case-study__cover">
                 <div id="left-arrow" class="case-study__arrow-container case-study__arrow-container--left">
                     <img src="../img/svg/arrow-left.svg" alt="" class="case-study__arrow case-study__arrow--left">
