--- a/blogs/typingwithtoddlers.html
+++ b/blogs/typingwithtoddlers.html
@@ -6,6 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="keywords" content="work from home positions, remote work, home office jobs, work from home jobs, remotejobs">
     <meta name="description" content="A candid look at remote work with young children. Learn how FWRD handles work-life balance, respect, and collaboration in a family-centric environment.">
+    
+    <meta property="og:title" content="FWRD - Blog" />
+    <meta property="og:type" content="website" />
+    <meta property="og:description" content="A candid look at remote work with young children. Learn how FWRD handles work-life balance, respect, and collaboration in a family-centric environment." />
+    <meta property="og:url" content="https://petarpaskas.github.io/DefinitelyNotImportant/index.html" />
+    <meta property="og:image" content="https://petarpaskas.github.io/DefinitelyNotImportant/img/icons/fwrd-logo.png" />
+    
     <link rel="apple-touch-icon" sizes="180x180" href="../img/ico/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="48x48" href="../img/ico/favicon.ico">
     <link rel="icon" type="image/png" sizes="32x32" href="../img/ico/favicon-32x32.png">
