--- a/index.html
+++ b/index.html
@@ -14,6 +14,12 @@
     <meta name="keywords" content="Web design, Merchandise, Digital Commerce, Ecommerce, Creative">
     <meta name="description" content="FWRD: A product-first creative house, empowering businesses with customised branding, marketing, and merchandising solutions." >
 
+    <meta property="og:title" content="FWRD" />
+    <meta property="og:type" content="website" />
+    <meta property="og:description" content="FWRD: A product-first creative house, empowering businesses with customised branding, marketing, and merchandising solutions." />
+    <meta property="og:url" content="https://petarpaskas.github.io/DefinitelyNotImportant/index.html" />
+    <meta property="og:image" content="https://petarpaskas.github.io/DefinitelyNotImportant/img/icons/fwrd-logo.png" />
+
     <link rel="apple-touch-icon" sizes="180x180" href="./img/ico/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="48x48" href="./img/ico/favicon.ico">
     <link rel="icon" type="image/png" sizes="32x32" href="./img/ico/favicon-32x32.png">
