--- a/links/services.html
+++ b/links/services.html
@@ -6,6 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="keywords" content="Creative agencies, Internet Marketing, Graphic Design, Merchandising Companies, Web Developer">
     <meta name="description" content="FWRD provides expert services in creative design, web development, and merchandising to elevate your projects and enable your ideas to take flight">
+    
+    <meta property="og:title" content="FWRD" />
+    <meta property="og:type" content="website" />
+    <meta property="og:description" content="FWRD: A product-first creative house, empowering businesses with customised branding, marketing, and merchandising solutions." />
+    <meta property="og:url" content="https://petarpaskas.github.io/DefinitelyNotImportant/index.html" />
+    <meta property="og:image" content="https://petarpaskas.github.io/DefinitelyNotImportant/img/icons/fwrd-logo.png" />
+    
     <link rel="apple-touch-icon" sizes="180x180" href="../img/ico/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="48x48" href="../img/ico/favicon.ico">
     <link rel="icon" type="image/png" sizes="32x32" href="../img/ico/favicon-32x32.png">
