--- a/blogs/transparency.html
+++ b/blogs/transparency.html
@@ -6,6 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="keywords" content="Innovative Team Collaboration, Business Philosophy, Mindful, Effective Communication Strategies, Transparent Business Practice">
     <meta name="description" content="Meaningful partnerships are fostered through effective communication and collaborative pathways. The FWRD approach to every client and project.">
+
+    <meta property="og:title" content="FWRD - Blog" />
+    <meta property="og:type" content="website" />
+    <meta property="og:description" content="FWRD: A product-first creative house, empowering businesses with customised branding, marketing, and merchandising solutions." />
+    <meta property="og:url" content="https://petarpaskas.github.io/DefinitelyNotImportant/index.html" />
+    <meta property="og:image" content="https://petarpaskas.github.io/DefinitelyNotImportant/img/icons/fwrd-logo.png" />
+
     <link rel="apple-touch-icon" sizes="180x180" href="../img/ico/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="48x48" href="../img/ico/favicon.ico">
     <link rel="icon" type="image/png" sizes="32x32" href="../img/ico/favicon-32x32.png">
